--- a/style.css
+++ b/style.css
@@ -14,19 +14,24 @@ div {
 
 .text{
     font-size: 30px;
-    margin: 10%;
+    margin-top: 5%;
+    text-align: center;
 }
 
 .body {
     font-size: 30px;
     margin-bottom: 10%;
-    }
+}
 
 .header {
     text-align: center;
-    font-size: 75px;
-    margin-bottom: 10%;
+    font-size: 85px;
+    margin-bottom: 20%;
     border: 5px solid #0b0c0b;
+        width: 50vw;
+        height: 10vw;
+        margin: auto;
+        padding: 10px;
     border-left: 5rem;
     border-right: 5rem;
 }
@@ -49,16 +54,20 @@ div {
 }
 
 .picture {
-    margin: 10%;
     height: 50%;
     width: 50%;
     text-align: center;
+    margin-top: 10%;
 }
 
 .Blog-post {
     width: 27%;
     height: 30rem;
     border: 5px solid #1e3d59;
+        width: 27%;
+        height: 33rem;
     text-align: center;
     margin-bottom: 10%;
+    border-radius: 50px;
+    box-shadow: 10px 5px 5px red;
 }
