--- a/style.css
+++ b/style.css
@@ -5,69 +5,63 @@ html,
     padding: 0;
     box-sizing: border-box;
     font-size: 62.5%;
+    color: #c0c0c0;
 }
 
-div {
-    background-image: url('Bg.webp');
-    color: #c0c0c0
+body {
+    font-family: 'Cinzel', serif;
 }
 
-.text{
-    font-size: 30px;
-    margin-top: 5%;
-    text-align: center;
-}
 
 .body {
     font-size: 30px;
-    margin-bottom: 10%;
 }
 
 .header {
     text-align: center;
-    font-size: 85px;
-    margin-bottom: 20%;
-    border: 5px solid #0b0c0b;
-        width: 50vw;
-        height: 10vw;
-        margin: auto;
-        padding: 10px;
-    border-left: 5rem;
-    border-right: 5rem;
+    font-size: 10rem;
+    margin-bottom: 10%;
+    border: 5px solid #1e3d59;
+        margin-right: 40rem;
+        margin-left: 40rem;
+            background-image: url('Bg.webp');
+    border-radius: 1rem;
+    margin-bottom: 10%;
 }
+
 .Post {
     display: flex;
     flex-wrap: wrap;
     height: 70vw;
-    margin: 3rem auto;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-bottom: 15%;
     height: 75vw;
-    margin: 3rem auto;
-    justify-content: space-around;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 150;
+    text-align: center;
 }
 
 .Blog-header {
     font-size: 30px;
+    margin-bottom: 2rem;
 
 }
 
+
 .picture {
-    height: 50%;
-    width: 50%;
-    text-align: center;
-    margin-top: 10%;
+    height: 18rem;
+    width: 85%;
+    box-sizing: border-box;
 }
 
 .Blog-post {
     width: 27%;
     height: 30rem;
-    border: 5px solid #1e3d59;
-        width: 27%;
-        height: 33rem;
+    border: 1rem solid #1e3d59;
     text-align: center;
-    margin-bottom: 10%;
-    border-radius: 50px;
-    box-shadow: 10px 5px 5px red;
+    margin-bottom: 15rem;
+    border-radius: 10rem;
+    box-shadow: 1.2rem 1rem 0.5rem 0.3rem #A9A9A9 ;
+        background-image: url('Bg.webp');
 }
