--- a/style.css
+++ b/style.css
@@ -43,15 +43,16 @@ body {
 }
 
 .Blog-header {
-    font-size: 50px;
-    margin-bottom: 2rem;
+    font-size: 45px;
+    margin-bottom: 3rem;
+    margin-top: 2rem;
 
 }
 
 
 .picture {
-    height: 25rem;
-    width: 75%;
+    height: 20rem;
+    width: 80%;
     box-sizing: border-box;
 }
 
@@ -76,6 +77,14 @@ body {
     .header {
         width: 80%;
         border: aqua;
+        text-align: center;
+    }
+}
+
+@media (max-width: 600px) {
+    .Blog-post {
+        width: 40%;
+        border: 1rem solid blue;
         text-align: center;
     }
 }
