--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html,
 
 body {
     font-family: 'Cinzel', serif;
+    transition: all 2s;
 }
 
 
@@ -71,8 +72,25 @@ body {
     margin-bottom: 15rem;
     border-radius: 10rem;
     box-shadow: 1.2rem 1rem 0.5rem 0.3rem #A9A9A9 ;
+    /* filter: blur(0.15rem) */
 }
 
+.hvr-grow {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
 
 @media (max-width: 768px)   {
     .Blog-post {
@@ -100,3 +118,4 @@ body {
         border: aqua;
     }
 }
+
