--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 
 .Headchild {
     display: inline-block;
-    margin-bottom: 10%;
+    margin-bottom: 20rem;
     border: 5px solid #1e3d59;
         background-image: url('Bg.webp');
     border-radius: 1rem;
@@ -72,25 +72,36 @@ body {
     margin-bottom: 15rem;
     border-radius: 10rem;
     box-shadow: 1.2rem 1rem 0.5rem 0.3rem #A9A9A9 ;
-    /* filter: blur(0.15rem) */
+    filter: blur(0.15rem)
 }
 
-.hvr-grow {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: transform;
-    transition-property: transform;
+.Blog-post1 {
+    width: 27%;
+    height: 40rem;
+    border: 1rem solid #1e3d59;
+    background-color: #891522;
+    text-align: center;
+    margin-bottom: 15rem;
+    border-radius: 10rem;
+    box-shadow: 0.3rem 0.5rem 1rem 1.2rem #A9A9A9 ;
+    filter: blur(0.15rem)
 }
 
-.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
+.Blog-post:hover {
+    background-color: red;
+    transform: scale(1.2);
+    transform-origin: right;
+    filter: none;
 }
+
+.Blog-post1:hover {
+    background-color: red;
+    transform: scale(1.2);
+    transform-origin: center;
+    filter: none;
+}
+
+
 
 @media (max-width: 768px)   {
     .Blog-post {
