--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 
 .body {
     background-color: #000;
+    transition: 0.7s;
 }
 
 .header {
@@ -27,8 +28,8 @@ body {
 
 .Headchild {
     display: inline-block;
-    margin-bottom: 20rem;
-    margin-top: 0%;
+    margin-bottom: 7rem;
+    margin-top: 20rem;
     border: 0.5rem solid #1e3d59;
         background-image: url('Bg.webp');
     border-radius: 1rem;
@@ -37,8 +38,10 @@ body {
     transform-style: preserve-3d;
 }
 
+
+
 .Post {
-    display: flex;
+    display: inline-flex;
     flex-wrap: wrap;
     height: 70vw;
     justify-content: space-around;
@@ -77,7 +80,6 @@ body {
 }
 
 #Hover1:hover {
-    background-color: gold;
     transform: scale(1.2);
     transform-origin: center;
     filter: none;
@@ -90,26 +92,68 @@ body {
     filter: none;
 }
 
-#Hover3::before {
-    transform:rotate(-0.5turn);
-}
-
 #Hover3:hover {
     background-color: gold;
-    transform: rotate(0.5turn);
     transform-origin: center;
     filter: none;
 }
-}
 
 #Hover4:hover {
-
+    transform: rotateY(360deg);
+    transition: 7s;
+    filter: none;
 }
 
 #Hover5:hover {
-
+    transform: rotateX(360deg);
+    transition: 7s;
+    filter: none;
 }
 
+.animation {
+    margin-right: auto;
+    margin-left: auto;
+    border: 0.5rem solid #1e3d59;
+    border-radius: 1rem;
+    font-size: 5rem;
+    animation: load 8s infinite;
+    position: absolute;
+    margin-top: 1rem;
+}
+
+
+@keyframes load {
+    0% {
+    left: 0%;
+    background-color: #891522;
+    transform: scale(1.2);
+    border: solid 0.5rem #1e3d59;
+    }
+
+    25% {
+    left: 25%;
+    background-color: #891522;
+    border: solid 0.5rem #1e3d59;
+    }
+
+    50% {
+    left: 50%;
+    background-color: #891522;
+    border: solid 0.5rem #1e3d59;
+    }   
+
+    75% {
+    left: 75%;
+    background-color: #891522;
+    border: solid 0.5rem #1e3d59;
+    }
+
+    100% {
+    left: 100%;
+    background-color: #891522;
+    border: solid 0.5rem #1e3d59;
+    }
+}
 
 @media (max-width: 768px)   {
     .Blog-post {
